# injinja

./: .gitignore  CLAUDE.md  Makefile  README.md  injinja.py  mkdocs.yml  pyproject.toml
.github/scripts/: update_coverage.py
.github/workflows/: cicd.yml  claude-code-review.yml  claude.yml  coverage-badge.yml  docs.yml  publish.yml
diagrams/: README.md  architecture.mmd  collections_of_configs.mmd  overview.mmd  schema_validation.mmd  testing.mmd
docs/: index.md
docs/api/: injinja.md
docs/architecture/: diagrams.md  overview.md
docs/user-guide/: advanced.md  configuration.md  installation.md  quick-start.md  schema-validation.md
examples/: README_jsonschema.md  README_pydantic.md  README_schema_validation.md  config_invalid.yaml  schema_example.json  schema_models.py  template.yml  test_scenarios.md
examples/quickstart/: README.md
examples/quickstart/config/: databases.yml
examples/quickstart/sql/: databases.sql.j2
examples/schema-validation/: EXAMPLES.md  README.md  config_invalid_1.yaml  config_invalid_2.yaml  config_invalid_3.yaml  config_invalid_4.yaml  config_pydantic_invalid.yaml  config_valid.yaml
samples/config/: common.json  common.yml  override.yml
samples/sample-1/config/: common.toml
samples/sample-1/expectations/: expectation-common.yml  expectation-override.yml
samples/sample-1/functions/: config_custom_functions.py
samples/sample-1/templates/: template.yml
samples/sample-2/config/: common.yml  override.yml
samples/sample-2/expectations/: expectation-common.yml  expectation-func.yml  expectation-override.yml
samples/sample-2/functions/: custom.py
samples/sample-2/templates/: template-func.yml  template.yml
samples/sample-3/config/: common.toml  invalid.json
samples/sample-3/expectations/: expectation-invalid.txt
samples/sample-3/templates/: template.yml
samples/templates/: template.yml
src/injinja/: __main__.py  injinja.py
tests/: conftest.py  test_confs.py  test_injinja.py  test_injinja_config_loading.py  test_injinja_config_merging.py  test_injinja_custom_functions.py  test_injinja_edge_cases.py  test_injinja_environment_variables.py  test_injinja_main_function.py  test_injinja_merge_function.py  test_injinja_schema_validation.py  test_injinja_templating.py  test_main.py  test_merge.py
